Add GetClientCertificates and GetBackups
